Fix alignment

--- a/sources/easygenerator.Web/Content/video.less
+++ b/sources/easygenerator.Web/Content/video.less
@@ -304,7 +304,7 @@
                 
                 .video-list-item-delete-confirmation-hint{
                     font: 11px 'OpenSansItalic';
-                    margin: 12px;
+                    padding: 12px;
                     width: 100%;
                     
                     .video-list-item-delete-confirmation-hint-warning{
